desktop-pwas: Add shutdown phase to WebAppProvider

When WebAppProvider destroys PendingAppManager during shutdown,
PendingAppManager try to destroy its WebContents if there is a pending
installation. This causes us to hit a DCHECK when the WebContents gets
destroyed during Profile's destructor.

To solve this, we add a Shutdown() phase to WebAppProvider and destroy
PendingAppManager there. This ensures that by the time the Profile gets
destroyed the WebContents is already destroyed.

Bug: 876176
Change-Id: I787a15ac7e1335a056cdad3824a3be8312393c5e
Reviewed-on: https://chromium-review.googlesource.com/1184563
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584972}